# e-codewhisper

./: .gitignore  .vscodeignore  CHANGELOG.md  Makefile  README.md  esbuild.js  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  substack.md  tsconfig.json  tsconfig.test.json
resources/: compose.yml
scripts/: test-extension.sh  test-recording.sh
src/: __init__.py
src/client/: extension.ts
src/client/test/: runTest.ts
src/client/test/suite/: extension.test.ts  index.ts
src/server/: __init__.py
src/server/python/: __init__.py  codewhisper.py
src/server/python/tests/: __init__.py  test_codewhisper.py
stt/: compose.cpu.yml  compose.yml  install.sh  test_whisperlive.py
